[package]
name = "cw-gopniks"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/cryptogopniks/cw-gopniks"
authors = ["M. Daeva <embedmad@gmail.com>"]
description = "CosmWasm codebase used across (and beyond) CryptoGopniks projects"
license = "Apache-2.0"
documentation = "https://docs.rs/cw-gopniks"
readme = "README.md"
keywords = ["cosmwasm", "blockchain", "cosmos"]
categories = ["cryptography::cryptocurrencies"]

[features]
assets = ["dep:cw20"]
auth = ["dep:cw-storage-plus"]
# bech32
# cw721
encryption = ["dep:serde", "dep:aes-gcm-siv"]
hashing = ["dep:argon2"]
# default = ["bech32"]
# full = ["bech32", "auth"]

[dependencies]
# required
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
thiserror = "2.0.12"
# optional
#
# default feature "getrandom" must be disabled to avoid error during static wasm validation
aes-gcm-siv = { version = "0.11.1", optional = true, default-features = false, features = [
  "aes",
  "alloc",
] }
argon2 = { version = "0.5.3", optional = true }
cw20 = { version = "2.0.0", optional = true }
cw-storage-plus = { version = "2.0.0", optional = true }
serde = { version = "1.0.163", optional = true }
