[package]
name = "cw-gopniks"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/cryptogopniks/cw-gopniks"
authors = ["M. Daeva <embedmad@gmail.com>"]
description = "CosmWasm codebase used across (and beyond) CryptoGopniks projects"
license = "Apache-2.0"
documentation = "https://docs.rs/cw-gopniks"
readme = "README.md"
keywords = ["cosmwasm", "blockchain", "cosmos"]
categories = ["cryptography::cryptocurrencies"]

[features]
assets = []
auth = ["dep:cw-storage-plus"]
bech32 = ["dep:bech32"]
nft = []
encryption = ["dep:aes-gcm-siv"]
hashing = ["dep:argon2"]
# mutually exclusive versions, only enable one of these at a time
cw-v1 = ["dep:cosmwasm-std-v1", "dep:cw20-v1", "dep:hex", "dep:base64"]
cw-v2 = ["dep:cosmwasm-std-v2", "dep:cw20-v2"]
# # don't include cw-v1 and cw-v2 in default to prevent analyzer errors in lib.rs during switching version
# default = ["assets", "auth"]
# full = ["default", "bech32", "nft", "encryption", "hashing"]

[dependencies]
# required
cosmwasm-std-v1 = { package = "cosmwasm-std", version = "=1.5.4", optional = true }
cosmwasm-std-v2 = { package = "cosmwasm-std", version = ">=2.2.0", optional = true }
cosmwasm-schema = "2.2.0"
thiserror = "2.0.12"
# optional
#
# default feature "getrandom" must be disabled to avoid error during static wasm validation
aes-gcm-siv = { version = "0.11.1", optional = true, default-features = false, features = [
  "aes",
  "alloc",
] }
argon2 = { version = "0.5.3", optional = true }
bech32 = { version = "0.9.1", optional = true }

cw20-v1 = { package = "cw20", version = "=1.1.2", optional = true }
cw20-v2 = { package = "cw20", version = ">=2.0.0", optional = true }

hex = { version = "=0.4", optional = true }
base64 = { version = "=0.22.0", optional = true }

# cosmwasm-storage = { version = "=1.2.0" }
cw-storage-plus = { version = "2.0.0", optional = true }
